# UnvisualKode

./: CMakeLists.txt  COPYING  README.md  UnvisualKode.pro  aboutwindow.cpp  unvisualkode.cpp  unvisualkode.h  unvisualkode.ui
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  unvisualkode.cpp  unvisualkode.h  unvisualkode.ui
src/gui/: aboutwindow.ui  unvisualkode.ui
src/managers/: editorsmanager.cpp  editorsmanager.h  filesmanager.cpp  filesmanager.h  filetreemanager.cpp  filetreemanager.h  tabsmanager.cpp  tabsmanager.h
